--- a/MonthlyStatement/Views/Shared/_Layout.cshtml
+++ b/MonthlyStatement/Views/Shared/_Layout.cshtml
@@ -11,6 +11,8 @@
     <title>Admin Monthly Statement</title>
     <!-- General CSS Files -->
     <link rel="stylesheet" href="~/assets/css/app.min.css" />
+    <link rel="stylesheet" href="~/assets/bundles/datatables/datatables.min.css">
+    <link rel="stylesheet" href="~/assets/bundles/datatables/DataTables-1.10.16/css/dataTables.bootstrap4.min.css">
     <!-- Template CSS -->
     <link rel="stylesheet" href="~/assets/css/style.css" />
     <link rel="stylesheet" href="~/assets/css/components.css" />
@@ -71,7 +73,7 @@
             </div>
         </div>
     </div>
-    <input hidden="hidden" id="requestUrl" value="@Url.Content("~")"/>
+    <input hidden="hidden" id="requestUrl" value="@Url.Content("~")" />
     <script src="~/assets/js/page/calendar.js"></script>
     <script src="~/assets/js/page/chart-amchart.js"></script>
     <script src="~/assets/js/page/chart-apexcharts.js"></script>
@@ -120,6 +122,8 @@
     <script src="~/assets/js/scripts.js"></script>
     <!-- Custom JS File -->
     <script src="~/assets/bundles/sweetalert/sweetalert.min.js"></script>
+    <script src="~/assets/bundles/datatables/datatables.min.js"></script>
+    <script src="~/assets/bundles/datatables/DataTables-1.10.16/js/dataTables.bootstrap4.min.js"></script>
 </body>
 
 <!-- index.html  21 Nov 2019 03:47:04 GMT -->
