--- a/MonthlyStatement/Areas/Admin/Views/PersonalReportForm/Formreport.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/PersonalReportForm/Formreport.cshtml
@@ -17,6 +17,7 @@
                         <div class="card-body">
                             @*THÔNG TIN NHÂN SỰ*@
                             <div class="section-title mt-1" style="font-weight:bold">
+                                <label>A. </label>
                                 THÔNG TIN NHÂN SỰ
                             </div>
                             <div class="section-title mt-2">
@@ -25,7 +26,7 @@
                                         <label style="font-size:14px; font-weight:600; line-height:42px">Họ và tên:</label>
                                     </div>
                                     <div class="col-lg-10">
-                                        <input style="width:300px" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Vui lòng nhập thông tin">
+                                        <input style="width:300px" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nhập nội dung">
                                     </div>
                                 </div>
                                 <div class="form-group row" style="margin-bottom:1px">
@@ -33,7 +34,7 @@
                                         <label style="font-size:14px; font-weight:600; line-height:42px">Email:</label>
                                     </div>
                                     <div class="col-lg-10">
-                                        <input style="width:300px" type="email" class="form-control" id="exampleFormControlInput1" placeholder="Vui lòng nhập thông tin">
+                                        <input style="width:300px" type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nhập nội dung">
                                     </div>
                                 </div>
                                 <div class="form-group row" style="margin-bottom:1px">
@@ -41,7 +42,7 @@
                                         <label style="font-size:14px; font-weight:600; line-height:42px">Khoa:</label>
                                     </div>
                                     <div class="col-lg-10">
-                                        <input style="width:300px" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Vui lòng nhập thông tin">
+                                        <input style="width:300px" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nhập nội dung">
                                     </div>
                                 </div>
                                 <div class="form-group row" style="margin-bottom:1px">
@@ -49,7 +50,7 @@
                                         <label style="font-size:14px; font-weight:600; line-height:42px">Chức vụ:</label>
                                     </div>
                                     <div class="col-lg-10">
-                                        <input style="width:300px" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Vui lòng nhập thông tin">
+                                        <input style="width:300px" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nhập nội dung">
                                     </div>
                                 </div>
                                 <div class="form-group row" style="margin-bottom:1px">
@@ -57,31 +58,213 @@
                                         <label style="font-size:14px; font-weight:600; line-height:42px">Ngày báo cáo:</label>
                                     </div>
                                     <div class="col-lg-10">
-                                        <input style="width:300px" type="date" class="form-control" id="exampleFormControlInput1" placeholder="Vui lòng nhập thông tin">
+                                        <input style="width:300px" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nhập nội dung">
                                     </div>
                                 </div>
                             </div>
 
                             @*CÔNG VIỆC THỰC HIỆN THEO KPI*@
                             <div class="section-title mt-3" style="font-weight:bold">
-                                <label>1. </label>
+                                <label>B. </label>
                                 CÔNG VIỆC THỰC HIỆN THEO KPI
                             </div>
                             <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
                                 <div class="col-lg-12">
-                                    <label style="font-size:14px; font-weight:600; line-height:42px">1.1</label>
-                                    Công tác giảng dạy
-                                </div>
-                                <div class="form-group custom-switch row" style="margin-bottom:1px">
-                                    <div class="col-lg-12">
-                                        <input style="width:300px" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Vui lòng nhập thông tin">
-                                    </div>
+                                    <table class="table table-bordered dataTable">
+                                        <tbody>
+                                            <tr>
+                                                <th>1.1</th>
+                                                <th>Công tác giảng dạy</th>
+                                                <th>Tổng tiết/giờ</th>
+                                                <th>Lớp/Nhóm</th>
+                                                <th>Thứ</th>
+                                                <th>Ca</th>
+                                                <th>Ghi chú</th>
+                                            </tr>
+                                            <tr>
+                                                <td scope="row">1</td>
+                                                <td style="width:30%">
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td>
+                                                    <input type="number" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td style="width:20%">
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td>
+                                                    <input type="number" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td style="width:20%">
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td scope="row">2</td>
+                                                <td style="width:30%">
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td>
+                                                    <input type="number" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td style="width:20%">
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td>
+                                                    <input type="number" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td style="width:20%">
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <table class="table table-bordered dataTable">
+                                        <tbody>
+                                            <tr>
+                                                <th>1.2</th>
+                                                <th>Công tác nghiên cứu khoa học (Theo QĐ 1514/QĐ-ĐHVL ngày 16/11/2021)</th>
+                                                <th>Tạp chí</th>
+                                                <th>Hạng</th>
+                                                <th>Kết quả</th>
+                                            </tr>
+                                            <tr>
+                                                <td scope="row">Nhóm 1</td>
+                                                <td>
+                                                    Nghiên cứu công bố quốc tế (CBQT)
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td scope="row">1</td>
+                                                <td >
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td scope="row">2</td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <table class="table table-bordered dataTable">
+                                        <tbody>
+                                            <tr>
+                                                <th>1.3</th>
+                                                <th>Phục vụ cộng đồng và chuyên môn khác (Theo PL1 QĐ 1516/QĐ-ĐHVL ngày 16/11/2021)</th>
+                                                <th>Số lượng</th>
+                                                <th>Kết quả</th>
+                                            </tr>
+                                            <tr>
+                                                <td scope="row">1</td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td scope="row">2</td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td scope="row">3</td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
                                 </div>
                             </div>
-
+                            <div class="section-title mt-3" style="font-weight:bold">
+                                <label>C. </label>
+                                TINH THẦN TRÁCH NHIỆM VỚI NHÀ TRƯỜNG
+                            </div>
+                            <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
+                                <div class="col-lg-12">
+                                    <table class="table table-bordered dataTable">
+                                        <tbody>
+                                            <tr>
+                                                <th>1.1</th>
+                                                <th>Công tác giảng dạy</th>
+                                                <th>Tổng tiết/giờ</th>
+                                                <th>Lớp/Nhóm</th>
+                                                <th>Thứ</th>
+                                                <th>Ca</th>
+                                                <th>Ghi chú</th>
+                                            </tr>
+                                            <tr>
+                                                <td scope="row">1</td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1" value="" >
+                                                </td>
+                                                <td style="width:12%">
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1" value="" >
+                                                </td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1" value="" >
+                                                </td>
+                                                <td style="width:10%">
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1" value="" >
+                                                </td>
+                                                <td style="width:6%">
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1" value="" >
+                                                </td>
+                                                <td>
+                                                    <input type="text" class="form-control" id="exampleFormControlInput1" value="" >
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
                             @*UPLOAD MINH CHỨNG*@
                             <div class="section-title mt-3" style="font-weight:bold">
-                                <label>2. </label>
+                                <label>D. </label>
                                 MINH CHỨNG
                             </div>
                             <form action="#" class="dropzone dz-clickable" id="mydropzone">
