--- a/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormPersonalEdit.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormPersonalEdit.cshtml
@@ -2,6 +2,7 @@
 @using MonthlyStatement.Models
 
 @{
+    ViewBag.Title = "FormDepartmentEdit";
     Layout = "~/Views/Shared/_Layout.cshtml";
     var lstCategory = Session["FormPersonalEdit-lstCategory"] as IEnumerable<Category>;
 }
