--- a/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
@@ -1,7 +1,10 @@
-﻿
+﻿@model IEnumerable<MonthlyStatement.Models.ReportYear>
+
 @{
+    ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 
 <section class="section">
     <div class="section-body">
@@ -13,22 +16,21 @@
                             <h4 class="text-white" style="font-size:1.75rem">Báo cáo cá nhân</h4>
                         </div>
                     </div>
-                    @*<div class="form-group">
-                            <div class="col-sm-12 buttons">
-                                <button class="btn btn-primary btn-round" id="add_report_year" style="color:white"><i class="fa fa-plus"></i>Tạo năm báo cáo</button>
-                            </div>
-                        </div>*@
                     <div class="row">
-                        <div hidden="hidden" id="appendata"></div>
-                        <div class="col-12 col-md-6 col-lg-3">
-                            <a class="card card-success" href="@Url.Action("Formreport", "PersonalReportForm")">
-                                <div class="card-header">
-                                    <h4>Tháng 12</h4>
+                        <div class="row">
+                            @foreach (var item in Model)
+                            {
+                                <div class="col-12 col-md-6 col-lg-3">
+                                    <a class="card card-success" href="@Url.Action("Index","ReportPeriods", new {id = item.report_year_id})">
+                                        <div class="card-header">
+                                            <h4>Năm @item.year</h4>
+                                        </div>
+                                        <div class="card-body">
+                                            <p>Các kỳ báo cáo năm @item.year</p>r
+                                        </div>
+                                    </a>
                                 </div>
-                                <div class="card-body">
-                                    <p>Kỳ báo cáo cá nhân tháng 12/2022</p>
-                                </div>
-                            </a>
+                            }
                         </div>
                     </div>
                 </div>
